# domaincountry-server

./: ..gitignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/dependencies/: __init__.py  get_hostname.py
src/models/: domain.py
src/routers/: __init__.py  domain.py
src/utils/: resolve.py
tests/: .coverage  test_get_domain_information.py
