[tool.poetry]
name = "domaincountry-server"
version = "0.1.0"
description = "Server which provides a REST api to query a domain for ip addresses, canonical name, etc."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
dnspython = "^2.1.0"
fastapi-redis-cache = "^0.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-dunder-all = "^0.1.7"
flake8-quotes = "^3.3.0"
pytest = "^6.2.5"
pytest-pydocstyle = "^2.2.0"
pytest-flake8 = "^1.0.7"
flake8-import-order = "^0.18.1"
pytest-cov = "^2.12.1"
pytest-mypy = "^0.8.1"
mypy = "^0.910"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "tests:start"
